--- a/index.html
+++ b/index.html
@@ -2,24 +2,30 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>Enter Code</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Code Access</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="container">
-  <img src="assets/logo.png" class="logo" alt="Logo">
+<div class="overlay">
+  <div class="card">
 
-  <h1>Enter the Code</h1>
+    <div class="logo-box">
+      <img src="assets/logo.png" alt="Logo">
+    </div>
 
-  <div class="code-box">
-    <input maxlength="1">
-    <input maxlength="1">
-    <input maxlength="1">
-    <input maxlength="1">
-    <input maxlength="1">
-    <input maxlength="1">
+    <h2>ENTER THE CODE</h2>
+
+    <div class="code-box">
+      <input maxlength="1">
+      <input maxlength="1">
+      <input maxlength="1">
+      <input maxlength="1">
+      <input maxlength="1">
+      <input maxlength="1">
+    </div>
+
   </div>
 </div>
 
