--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Enter Code</title>
+  <meta charset="UTF-8" />
+  <title>Kick Off Meeting Riau Pulp 2026</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="overlay">
+<div class="container">
   <div class="card">
-
+    
     <div class="logo-box">
-      <img src="assets/logo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
     </div>
 
     <h2>ENTER THE CODE</h2>
 
-    <div class="code-box">
-      <input maxlength="1">
-      <input maxlength="1">
-      <input maxlength="1">
-      <input maxlength="1">
-      <input maxlength="1">
-      <input maxlength="1">
+    <div class="code-boxes">
+      <input maxlength="1" disabled>
+      <input maxlength="1" disabled>
+      <input maxlength="1" disabled>
+      <input maxlength="1" disabled>
+      <input maxlength="1" disabled>
+      <input maxlength="1" disabled>
     </div>
 
   </div>
 </div>
 
-<audio id="correctSound" src="sounds/correct.mp3"></audio>
-<audio id="wrongSound" src="sounds/wrong.mp3"></audio>
+<audio id="correctSound" src="correct.mp3"></audio>
+<audio id="wrongSound" src="wrong.mp3"></audio>
 
 <script src="script.js"></script>
 </body>
