--- a/index.html
+++ b/index.html
@@ -3,35 +3,25 @@
 <head>
   <meta charset="UTF-8" />
   <title>Kick Off Meeting Riau Pulp 2026</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<div class="container">
-  <div class="card">
-    
-    <div class="logo-box">
-      <img src="logo.png" alt="Logo">
+  <div class="container">
+    <img src="logo.png" class="logo" />
+
+    <div class="code-container">
+      <div class="code-box"></div>
+      <div class="code-box"></div>
+      <div class="code-box"></div>
+      <div class="code-box"></div>
+      <div class="code-box"></div>
+      <div class="code-box"></div>
     </div>
 
-    <h2>ENTER THE CODE</h2>
-
-    <div class="code-boxes">
-      <input maxlength="1" disabled>
-      <input maxlength="1" disabled>
-      <input maxlength="1" disabled>
-      <input maxlength="1" disabled>
-      <input maxlength="1" disabled>
-      <input maxlength="1" disabled>
-    </div>
-
+    <p class="hint">Enter the access code</p>
   </div>
-</div>
 
-<audio id="correctSound" src="correct.mp3"></audio>
-<audio id="wrongSound" src="wrong.mp3"></audio>
-
-<script src="script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
