--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Kick Off Meeting Riau Pulp 2026</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>Enter The Code</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div class="container">
-    <img src="logo.png" class="logo" />
+<div class="overlay">
+  <div class="card">
+    <img src="logo.png" class="logo">
+
+    <h2>ENTER THE CODE</h2>
 
     <div class="code-container">
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
-      <div class="code-box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
+      <div class="box"></div>
     </div>
-
-    <p class="hint">Enter the access code</p>
   </div>
+</div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
