--- a/index.html
+++ b/index.html
@@ -1,29 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Enter The Code</title>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+<title>KOM Riau Pulp 2026</title>
+
+<style>
+* { box-sizing: border-box; }
+body {
+  margin: 0;
+  height: 100vh;
+  background: radial-gradient(circle at top, #0b1d36, #020b1a);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, sans-serif;
+  color: white;
+}
+
+.card {
+  background: #16243b;
+  padding: 30px;
+  border-radius: 20px;
+  width: 90%;
+  max-width: 420px;
+  text-align: center;
+}
+
+.logo {
+  background: white;
+  padding: 12px;
+  border-radius: 12px;
+  margin-bottom: 20px;
+}
+
+.logo img {
+  width: 100%;
+  max-height: 80px;
+  object-fit: contain;
+}
+
+h2 {
+  margin-bottom: 20px;
+  letter-spacing: 1px;
+}
+
+.code {
+  display: flex;
+  justify-content: space-between;
+}
+
+.code input {
+  width: 48px;
+  height: 56px;
+  font-size: 26px;
+  text-align: center;
+  border-radius: 10px;
+  border: 2px solid #334b70;
+  background: #0e1a2d;
+  color: white;
+  outline: none;
+}
+
+.code input.correct {
+  border-color: #22c55e;
+  background: #14532d;
+}
+
+.code input.wrong {
+  border-color: #ef4444;
+  animation: shake 0.3s;
+}
+
+@keyframes shake {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  50% { transform: translateX(5px); }
+  75% { transform: translateX(-5px); }
+  100% { transform: translateX(0); }
+}
+</style>
 </head>
+
 <body>
 
-<div class="overlay">
-  <div class="card">
-    <img src="logo.png" class="logo">
+<div class="card">
+  <div class="logo">
+    <img src="logo.png" alt="Logo">
+  </div>
 
-    <h2>ENTER THE CODE</h2>
+  <h2>ENTER THE CODE</h2>
 
-    <div class="code-container">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-    </div>
+  <div class="code">
+    <input maxlength="1" inputmode="text" />
+    <input maxlength="1" inputmode="text" disabled />
+    <input maxlength="1" inputmode="text" disabled />
+    <input maxlength="1" inputmode="text" disabled />
+    <input maxlength="1" inputmode="text" disabled />
+    <input maxlength="1" inputmode="text" disabled />
   </div>
 </div>
 
-<script src="script.js"></script>
+<audio id="correctSound" src="correct.mp3"></audio>
+<audio id="wrongSound" src="wrong.mp3"></audio>
+
+<script>
+const answer = "KR2026";
+const inputs = document.querySelectorAll(".code input");
+const correctSound = document.getElementById("correctSound");
+const wrongSound = document.getElementById("wrongSound");
+
+inputs[0].focus();
+
+inputs.forEach((input, index) => {
+  input.addEventListener("input", () => {
+    const value = input.value.toUpperCase();
+    input.value = value;
+
+    if (value === answer[index]) {
+      input.classList.add("correct");
+      input.disabled = true;
+      correctSound.play();
+
+      if (index === answer.length - 1) {
+        setTimeout(() => {
+          window.location.href =
+            "https://www.youtube.com/embed/Qz_YPmpfzjY?autoplay=1&controls=0";
+        }, 600);
+      } else {
+        inputs[index + 1].disabled = false;
+        inputs[index + 1].focus();
+      }
+    } else {
+      input.classList.add("wrong");
+      wrongSound.play();
+
+      setTimeout(() => {
+        input.value = "";
+        input.classList.remove("wrong");
+      }, 300);
+    }
+  });
+});
+</script>
+
 </body>
 </html>
